--- a/index.html
+++ b/index.html
@@ -44,13 +44,21 @@
       .text-glow {
         text-shadow: 0 0 10px rgba(212, 175, 55, 0.3);
       }
+      /* Animation for buttons */
+      @keyframes button-pulse {
+        0%, 100% { transform: scale(1); }
+        50% { transform: scale(1.03); }
+      }
+      .animate-button-pulse {
+        animation: button-pulse 2s infinite ease-in-out;
+      }
     </style>
   <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
     "lucide-react": "https://esm.sh/lucide-react@^0.564.0",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
